Implement user service self service APIs
